fixed problem with null amount of ingredients